--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-debinsight (0.1-1) unstable; urgency=low
+debinsight (0.2.0) UNRELEASED; urgency=low
 
-  * Initial public release
+  * debinsight: Initial debian packaging
 
-   -- Oliver Maurhart <dyle71@gmail.com>  Sam, 15 Jun 2019 17:17:00 +0200
+ -- Oliver Maurhart <dyle71@gmail.com> Day, 01 Jan 2014 12:34:56 +0000
