fixes setup.py to have a good sdist build

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ debinsight (0.2.0) UNRELEASED; urgency=low
 
   * debinsight: Initial debian packaging
 
- -- Oliver Maurhart <dyle71@gmail.com> Day, 01 Jan 2014 12:34:56 +0000
+ -- Oliver Maurhart <dyle71@gmail.com> Sat, 15 Jun 2019 17:17:56 +0200
